Update API endpoint in index.html

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   </div>
 
   <script>
-    const API = 'https://your-vercel-app.vercel.app/api';
+    const API = 'https://evcoin-server.vercel.app/';
     let key = localStorage.getItem('evc_key');
     let wallet = null;
 
