--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   </div>
 
   <script>
-    const API = 'https://evcoin-server.vercel.app/';
+    const API = 'https://evcoin-server.vercel.app';
     let key = localStorage.getItem('evc_key');
     let wallet = null;
 
