Implement mining functionality in index.html

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
           <button onclick="mine()" id="mineBtn" class="w-full bg-purple-600 text-white p-3 rounded-xl font-semibold">Start Mining</button>
           <div id="mineRes" class="mt-3"></div>
         `;
-        getStats();
+        ;
       }
       if (type === 'wallet') {
         title.textContent = 'Wallet';
@@ -280,6 +280,48 @@
         document.getElementById('sendRes').innerHTML = `<div class="bg-red-50 border-l-4 border-red-500 p-4 rounded-xl text-sm">Error</div>`;
       }
     }
+  
+  
+  async function mine() {
+  if (!wallet || !wallet.address) {
+    alert('Login first');
+    return;
+  }
+
+  const btn = document.getElementById('mineBtn');
+  const resEl = document.getElementById('mineRes');
+
+  btn.disabled = true;
+  resEl.innerHTML = '<div class="text-gray-600">Mining in progress...</div>';
+
+  try {
+    const res = await fetch(`${API}/mine?private_key=${key}&start_mine=true`);
+    const data = await res.json();
+
+    if (data.status === 'queued' || data.status === 'mining') {
+      resEl.innerHTML = `<div class="bg-blue-50 border-l-4 border-blue-500 p-4 rounded-xl text-sm">
+        Mining started! Difficulty: ${data.difficulty}, Estimated reward: ${data.reward.toFixed(5)}
+      </div>`;
+    } else if (data.status === 'completed') {
+      wallet.balance = data.result.newBalance;
+      document.getElementById('balance').textContent = wallet.balance;
+      document.getElementById('usd').textContent = `≈ $${(parseFloat(wallet.balance) * 0.5).toFixed(2)}`;
+      resEl.innerHTML = `<div class="bg-green-50 border-l-4 border-green-500 p-4 rounded-xl text-sm">
+        Successfully mined ${data.result.minedAmount} EVCoin! New balance: ${data.result.newBalance}
+      </div>`;
+    } else {
+      resEl.innerHTML = `<div class="bg-red-50 border-l-4 border-red-500 p-4 rounded-xl text-sm">
+        Mining failed or rate limited.
+      </div>`;
+    }
+  } catch (e) {
+    resEl.innerHTML = `<div class="bg-red-50 border-l-4 border-red-500 p-4 rounded-xl text-sm">
+      Error contacting mining server
+    </div>`;
+  } finally {
+    btn.disabled = false;
+  }
+}
 
     async function getFee() {
       try {
